--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,9 @@
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -55,6 +55,12 @@ code {
     monospace;
 }
 
+.box.no-border {
+  margin: 10px;
+  padding: 0px;
+  border: none;
+  box-sizing: border-box;
+}
 .box {
   margin: 10px;
   padding: 10px;
@@ -137,8 +143,14 @@ code {
 .bottom-navigation.positioning-frame {
   margin-top: auto;
 }
+
+button.delete-project {
+  width: 30%;
+  width: 30%;
+}
+/* ---------------------------------------- */
 /*
- * Debugging markers
+ * Debugging layout markers
  */
 .marker {
   position: absolute;
@@ -161,6 +173,29 @@ code {
   top: calc(0vh + var(--main-view-top));
   right: 24px;
   background: #000;
+}
+/* ---------------------------------------- */
+/*
+ * Design process
+ */
+ul[title]::before {
+  content: attr(title);
+  /* then add some nice styling as needed, eg: */
+  display: block;
+  font-weight: bold;
+  padding: 4px;
+  padding-left: 0px;
+  margin-left: -10px;
+}
+.next-steps ul {
+  list-style-position: outside;
+  margin-left: -20px;
+}
+.next-steps ul > li {
+  font-size: 12px;
+}
+.done {
+  text-decoration: line-through;
 }
 /* ---------------------------------------- */
 .project-view {
@@ -193,6 +228,22 @@ code {
   padding: 16px;
 }
 
+/* other css */
+.left-align {
+  margin: 0 auto 0 0;
+  display: block;
+  width: fit-content;
+}
+.right-align {
+  margin: 0 0 0 auto;
+  display: block;
+  width: fit-content;
+}
+.center-align {
+  margin: 0 auto 0 auto;
+  display: block;
+  width: fit-content;
+}
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
