--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -360,11 +360,6 @@ body {
 
 html,
 body,
-#App {
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-}
 * {
   scrollbar-width: thin;
 }
@@ -396,13 +391,27 @@ th {
   font-weight: 'normal';
 }
 
-.Luci-SplitPane {
-    position: relative /* 🦀 ? */
+.SplitPane {}
+
+.SplitPane > .Pane {
+    overflow: inherit;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+.SplitPane > .Pane > div {
+    overflow: inherit;
 }
 
 div.stack {
   display: flex;
   flex-direction: column;
+}
+
+span.google-drive {
+    display: block;
+    text-align: center;
+    margin-top: 4px;
 }
 
 .input-row-group {
@@ -445,5 +454,56 @@ div.stack {
   }
 }
 
+/* SplitPane related */
+
+.Resizer {
+  background: #000;
+  opacity: 0.2;
+  z-index: 1;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+}
+
+.Resizer:hover {
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
+}
+
+.Resizer.horizontal {
+  height: 11px;
+  margin: -5px 0;
+  border-top: 5px solid rgba(255, 255, 255, 0);
+  border-bottom: 5px solid rgba(255, 255, 255, 0);
+  cursor: row-resize;
+  width: 100%;
+}
+
+.Resizer.horizontal:hover {
+  border-top: 5px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 5px solid rgba(0, 0, 0, 0.5);
+}
+
+.Resizer.vertical {
+  width: 11px;
+  margin: 0 -5px;
+  border-left: 5px solid rgba(255, 255, 255, 0);
+  border-right: 5px solid rgba(255, 255, 255, 0);
+  cursor: col-resize;
+}
+
+.Resizer.vertical:hover {
+  border-left: 5px solid rgba(0, 0, 0, 0.5);
+  border-right: 5px solid rgba(0, 0, 0, 0.5);
+}
+.Resizer.disabled {
+  cursor: not-allowed;
+}
+.Resizer.disabled:hover {
+  border-color: transparent;
+}
 
 /* END */
