--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -29,14 +29,14 @@
    * within main,
    * 👉 main-menu
    * 👉 main-view */
-  --main-menu-flex: 1 1 auto;
-  --main-view-flex: 6 1 auto;
+  --main-menu-flex: 1 3 0%;
+  --main-view-flex: 6 1 0%;
 
   /* within main-controller-root
    * 👉 main-controller
    * 👉 main-view.inner */
-  --controller-flex: 1 1 30%;
-  --main-view-inner: 5 1 70%;
+  --controller-flex: 1 3 0%;
+  --main-view-inner: 5 1 0%;
 }
 body {
   margin: 0;
@@ -119,7 +119,7 @@ code {
   margin: 0;
   padding: 0;
   flex: var(--controller-flex);
-  margin-right: auto;
+  /* margin-right: auto; */
   max-width: 350px;
 }
 /* exposed to container dynamics
