ready for new shell

--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -159,8 +159,7 @@ button.delete-project {
   right: 24px;
   background: #000;
 }
-/* ---------------------------------------- */
-/*
+/* ----------------------------------------
  * Design process
  */
 ul[title]::before {
