--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -4,14 +4,21 @@
 :root {
   /* visually confirmation
    * To size the main-view, use top and bottom
-   * of the main-view.inner div (should be sum of margins) */
+   * of the main-view.outlet div (should be sum of margins) */
   --main-view-top: 64px;
-  --main-view-bottom: 10px;
+  --main-view-bottom: 0px;
   --main-view-min-width: 400px;
+
+  /* gap between controller and outlet */
+  --controller-outlet-gap: 0.15rem;
+  --controller-outlet-radius: 1rem;
 
   /* computed value to set the height of main-view */
   --main-view-height: calc(
-    100vh - var(--main-view-top) - var(--main-view-bottom)
+    100vh
+    - var(--main-view-frame-margin) * 2
+    - var(--main-view-top)
+    - var(--main-view-bottom)
   );
 
   /* ⬜ Decide on which box to set margin; rest set to zero
@@ -24,6 +31,7 @@
   --top-bar-height: 50px;
   --main-view-margin: 0px; /* keep at zero; used in a couple of layers */
   --main-view-padding: 0px; /* keep at zero; used in a couple of layers */
+  --main-view-frame-margin: 0.75rem;
 
   /* flexbox - menue, controller & main views
    *
@@ -35,9 +43,9 @@
 
   /* within main-controller-root
    * 👉 main-controller
-   * 👉 main-view.inner */
-  --controller-flex: 1 3 0%;
-  --main-view-inner: 5 1 0%;
+   * 👉 main-view.outlet */
+  --projects-controller-flex: 1 3 0%;
+  --main-view-outlet-flex: 5 1 0%;
 }
 
 
@@ -78,6 +86,12 @@
   flex-direction: row;
   gap: 10px;
 }
+.nogap {
+  gap: 0;
+}
+.noradius {
+  border-radius: 0;
+}
 .space-between {
   justify-content: space-between;
 }
@@ -110,12 +124,15 @@
 .main-controller-root {
   gap: 0;
 }
-.main-controller {
-  margin: 0;
+.projects.main-controller {
+  margin: 10px;
   padding: 0;
-  flex: var(--controller-flex);
-  /* margin-right: auto; */
+  flex: var(--projects-controller-flex);
   max-width: 350px;
+}
+.projects.main-controller.mini {
+  flex: unset;
+  width: 80px;
 }
 /* exposed to container dynamics
  * inner reserved for layout of item */
@@ -124,11 +141,37 @@
   margin: var(--main-view-margin);
   padding: var(--main-view-padding);
 }
-.main-view.inner {
-  flex: var(--main-view-inner);
+.main-view.outlet {
+  flex: var(--main-view-outlet-flex);
   min-width: var(--main-view-min-width);
 }
-
+/* outlet and projects frames complements */
+.main-view.outlet.frame {
+    border-top-right-radius: var(--controller-outlet-radius);
+    border-bottom-right-radius: var(--controller-outlet-radius);
+    border-top-left-radius: 0rem;
+    border-bottom-left-radius: 0rem;
+    margin-left: var(--controller-outlet-gap);
+}
+.main-controller.projects.frame{
+    border-top-right-radius: 0rem;
+    border-bottom-right-radius: 0rem;
+    border-top-left-radius: var(--controller-outlet-radius);
+    border-bottom-left-radius: var(--controller-outlet-radius);
+    background-color: var(--color-primary-contrastText);
+    padding: 0.7rem;
+    margin-right: var(--controller-outlet-gap);
+}
+.main-view.frame {
+    border-radius: 1rem;
+    background-color: var(--color-primary-contrastText);
+    margin: var(--main-view-frame-margin);
+}
+.main-view.frame.off {
+    border-radius: 0;
+    background-color: inherit;
+    margin: var(--main-view-margin);
+}
 /* 🔖 🔑 The top is not 0 but lower on the screen.
  *    Also consider, you are pushing parents with
  *    margins and padding down; we need to consider
@@ -136,6 +179,9 @@
  */
 .main-view.sizing-frame {
   height: var(--main-view-height);
+}
+.main-view.frame.sizing {
+  /* height: var(--main-view-height); */
 }
 .bottom-navigation.positioning-frame {
   margin-top: auto;
@@ -160,27 +206,71 @@
 .side-nav {
     height: inherit;
 }
-.project-mini-card > .short-id {
+.main-controller.projects {
+    --padding: 7px;
+}
+.project-summary-view > .short-id {
+    font-size: 1em;
+}
+.project-summary-view.mini > .short-id {
     font-size: 0.8em;
 }
-.project-mini-card {
+/* hide when in mini mode */
+.project-summary-view.mini  .short-id > .label,
+.project-summary-view.mini  .delete-button  {
+    display: none;
+}
+.project-summary-view {
     flex: 1;
 }
-.list.projects > .item:hover {
+.new-project.center {
+    margin: 16px auto 8px auto;
+}
+/* mini version of new-project button */
+.new-project.button.mini {
+    background-color: var(--color-primary-main);
+    height: 34px;
+    width: 34px;
+    color: var(--color-primary-contrastText);
+}
+.new-project.button.mini:hover {
     background-color: var(--color-primary-light);
-    opacity: 1;
+    color: var(--color-primary-main);
+}
+/* projects list (heading, nav and items) */
+.main-controller.projects > .header {
+    /* follow nav */
+    margin: 0;
+}
+.main-controller.projects > .header > .heading {
+    /* aka title match list item */
+    margin: 0;
+    padding: var(--padding);
+}
+/* adjust toggle */
+.main-controller.projects > .header > .toggle {
+    margin: 0;
+    padding: var(--padding);
+    padding-right: var(--padding);
+}
+.main-controller.projects.mini > .header > .toggle {
+    margin: 0 auto;
 }
 .list.projects > .item {
     opacity: 0.5;
+    cursor: pointer;
+    padding: var(--padding);
+}
+.list.projects > .item:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+    opacity: 1;
 }
 .list.projects > .item.enable {
     opacity: 1;
 }
 .list.projects > .item.Mui-selected {
+    background-color: var(--color-primary-superLight);
     opacity: 1;
-}
-.list.heading {
-    margin: 0;
 }
 /* ---------------------------------------- */
 /*
