--- a/src/assets/luci-theme.css
+++ b/src/assets/luci-theme.css
@@ -9,6 +9,8 @@
 :root {
 
 /*
+ * Generate css from lucivia-theme.js
+ *
 const parse = jsonString => {
   const jsonValue = JSON.parse(jsonString);
   return Object.entries(jsonValue).reduce((acc, [key, obj]) => {
@@ -24,14 +26,14 @@ const parse = jsonString => {
 
   --color-primary-main:#52A5B8;
   --color-primary-light:#B2E1EC;
-  --color-primary-dark:#33889C;
+  --color-primary-dark:#52A5B8;
   --color-primary-extraLight:#B2E1EC;
   --color-primary-extraDark:#19788E;
   --color-primary-superLight:rgba(178,225,236,0.4);
   --color-primary-superLightHex:#b2e1ec;
   --color-primary-extremeLight:rgba(178,225,236,0.2);
-  --color-primary-contrastText:#fff;
-  --color-primary-text: #757575;
+
+  --color-primary-contrastText: #fff;
 
   --color-secondary-main:#FF9445;
   --color-secondary-light:#FFA868;
@@ -56,11 +58,6 @@ const parse = jsonString => {
   --color-meta-contrastText:#fff;
   --color-meta-text: var(--color-primary-main);
 
-  --color-text-primary:rgba(0, 0, 0, 0.6);
-  --color-text-secondary:rgba(0, 0, 0, 0.8);
-  --color-text-disabled:rgba(0, 0, 0, 0.4);
-  --color-text-hint:rgba(0, 0, 0, 0.4);
-
   --color-custom-red:#dc143c;
   --color-custom-yellow:#f0db4f;
   --color-custom-green:#339966;
@@ -72,11 +69,53 @@ const parse = jsonString => {
   --color-grey: #646464;
   --color-white: #ffffff;
   --color-yellow: #f0db4f;
+
+
+  /* compliment with dark-theme */
+  /* 5 levels of background (heading ~ mui table head) */
+  --color-background-title: rgb(250, 250, 250);
+  --color-background-heading: rgb(250, 250, 250);
+  --color-background-footer: rgb(217, 217, 217);
+  --color-background-card: rgb(250, 250, 250);
+  --color-background-paper: rgb(250, 250, 250);
+  --color-background-sideBar: rgb(250, 250, 250);
+  --color-background: rgb(240, 240, 240);
+  --color-text-primary:rgba(0, 0, 0, 0.6);
+  --color-text-secondary:rgba(0, 0, 0, 0.7);
+  --color-text-disabled:rgba(0, 0, 0, 0.5);
+  --color-text-icon:rgba(0, 0, 0, 0.5);
+  --color-text-hint:rgba(0, 0, 0, 0.7);
+  --color-secondary-superLight: rgba(255, 168, 104, 0.3);
+  --color-invert: 0;
+
+  --color-split-pane-resizer: var(--color-primary-superLight);
+  /* end dark-theme */
+
 }
 
-/* border-box that still allows for
- * using content-box or padding-box
- */
+.dark-theme-context {
+  /* closer = lighter, so high z-index = lighter */
+  --color-primary-main: #8edceb;
+  --color-primary-dark:#42808b;
+  --color-box-color: rgb(117, 117, 117);
+  --color-text-body: rgba(0, 0, 0, 0.6);
+  --color-icon: rgb(250, 250, 250);
+  /* 5 levels of background (heading ~ mui table head) */
+  --color-background-title: rgb(80, 80, 80);
+  --color-background-heading: rgb(66, 66, 66);
+  --color-background-footer: rgb(66, 66, 66);
+  --color-background-card: rgb(47, 47, 47);
+  --color-background-paper: rgb(33, 33, 33);
+  --color-background-sideBar: rgb(18, 18, 18);
+  --color-background: rgb(18, 18, 18);
+  --color-contrast-text: rgb(18, 18, 18);
+  --color-primary-contrastText: rgb(18, 18, 18);
+  --color-text-primary:rgba(250, 250, 250, 0.6);
+  --color-text-secondary:rgba(250, 250, 250, 0.8);
+  --color-secondary-superLight: rgba(255, 168, 104, 0.3);
+  --color-secondary-dark: #a5480070;
+  --color-invert: 87%;
+}
 .color-go-green {
   color: rgb(0, 179, 0, 1);
 }
@@ -89,26 +128,44 @@ const parse = jsonString => {
 .color-primary-main {
   color: var(--color-primary-main);
 }
-.color-primary-text {
-  color: var(--color-primary-text);
+.color-text-primary {
+  color: var(--color-text-primary);
 }
-body {
-  color: var(--color-primary-text);
+
+html,
+body,
+* {
+  scrollbar-width: thin;
+}
+/* use this instead of body (enables toggling dark theme) */
+main,
+header {
+  color: var(--color-text-secondary);
   font-size: 1rem;
   font-family: Lato;
   font-weight: 400;
   line-height: 1.5;
 }
+code {
+  font-family: JetBrainsMono, monospace;
+}
+blockquote {
+  box-shadow: none;
+}
+
+p {
+  text-shadow: 1px 1px 1px rgba(150, 150, 150, 0.3);
+}
+table {
+  border-collapse: collapse;
+}
+th td {
+  font-weight: bold;
+  font-family: Rubik, sans-serif;
+}
 i,
 em {
   font-style: italic;
-}
-.body2 {
-  color: var(--color-primary-text);
-  font-size: 0.9rem;
-  font-family: Lato;
-  font-weight: 400;
-  line-height: 1.43;
 }
 caption {
   font-size: 0.75rem;
@@ -134,9 +191,6 @@ div h6:first-of-type {
 div h6:not(:first-of-type) {
   margin-top: 20px;
 }
-.center {
-  text-align: center;
-}
 h1,
 h2,
 h3,
@@ -147,7 +201,7 @@ h6,
 .subtitle2,
 .overline {
   font-family: Rubik, Lato, Roboto, Helvetica, Arial, sans-serif;
-  color: var(--color-primary-text);
+  color: var(--color-text-primary);
 }
 h1 {
   font-size: 5rem;
@@ -219,27 +273,11 @@ p {
 .code-heading {
   margin: 1em;
 }
-code {
-  font-family: JetBrainsMono, monospace;
-}
 
-blockquote {
-  box-shadow: none;
-}
-/* miscellaneous best practices */
-table {
-  border-collapse: collapse;
-}
-th td {
-  font-family: Rubik, sans-serif;
-}
-th {
-  font-weight: bold;
-}
 ol,
 ul,
 li {
-  color: var(--color-primary-text);
+  color: var(--color-text-primary);
 }
 
 ol,
@@ -289,12 +327,14 @@ li li {
 .big-text {
   font-size: 3em;
 }
-
+.center {
+  text-align: center;
+}
 .button {
-  border-radius: 20px;
-  background-color: transparent;
+  border-radius: 2rem;
   font-family: "Rubik", sans-serif;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 400;
   text-align: center;
+  white-space: nowrap;
 }
