--- a/src/core-app/assets/splash.css
+++ b/src/core-app/assets/splash.css
@@ -11,7 +11,6 @@
   z-index: 1000;
 }
 .Luci-splash > .center {
-  background: #FFFFFF;
   border-radius: 10px;
   position: absolute;
   top: 0;
@@ -19,12 +18,13 @@
   left: 0;
   right: 0;
   margin: auto;
-  height: 200px;
   width: 300px;
+  height: 230px;
   box-shadow:
     0px 1px 3px 0px rgba(0,0,0,0.2),
     0px 1px 1px 0px rgba(0,0,0,0.14),
     0px 2px 1px -1px rgba(0,0,0,0.12);
+  background: var(--color-background-paper);
 }
 .Luci-splash > .center > .cogs {
   background: url('cogs.gif') no-repeat;
@@ -33,6 +33,7 @@
   height: 70px;
   width: 60px;
   margin: 20px auto 5px;
+  filter: invert(var(--color-invert));
 };
 
 
