--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -676,6 +676,7 @@ span.google-drive {
 }
 .markdown.workbench > :is(h3, h4, h5, h6) {
     text-align: center;
+    margin-bottom: 1rem;
 }
 /* ---------------------------------------- */
 /*
