--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -619,6 +619,17 @@ span.google-drive {
 .input-row-group.project-name {
     max-width: 300px;
 }
+
+/* ---------------------------------------- */
+/* login WIP */
+.login-providers {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+/* ---------------------------------------- */
+/* spinner */
 .spinner-root {
     width: 100%;
     height: 100%;
