--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -7,3 +7,9 @@
   height: calc(50vh - 50px);
   width: 100%;
 }
+.login-providers {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
