--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -581,6 +581,8 @@ button:-moz-focusring,
 /* HeaderView, EtlFieldView */
 .Luci-EtlFieldView.MuiCard-root,
 .Luci-HeaderView.MuiCard-root,
+.Luci-FileField-HeadingBox > .box-card,
+.Luci-FileField-HeadingBox .border-heading,
 .Luci-sources.root * {
     background-color: var(--color-background-card);
 }
@@ -589,6 +591,60 @@ button:-moz-focusring,
 }
 .Luci-sources.root > .Luci-FileField-HeadingBox > div {
     border: 1px solid var(--color-text-primary)
+}
+
+.Luci-FileField-HeadingBox  .minimizable-container {
+  background-color: var(--color-background-card);
+  color: var(--color-text-primary);
+  border-radius: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+.Luci-FileField-HeadingBox  .minimizable-container:hover {
+    filter: brightness(1.2);
+    cursor: pointer;
+}
+.Luci-FileField-HeadingBox .border-heading {
+  border-radius: 10px;
+  padding: 3px 3px;
+}
+.Luci-error-card {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: 5px auto;
+    background-color: transparent;
+}
+.Luci-error-card.detail-view {
+    margin-top: 0px;
+}
+.Luci-error-card .divider {
+    background-color: rgba(209,5,20,0.2);
+}
+.Luci-error-card > .view {
+    background-color: var(--color-background-title);
+    margin: 0.3rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    padding: 0.3rem;
+    min-height: 0;
+    grid-row: 1;
+    grid-column: 1 / span 2;
+    align-self: start;
+}
+.error-item {
+    margin-left: 1.5rem;
+}
+.error-icon {
+    color: var(--color-error-main);
+}
+.error-flag {
+  margin-top: -45px;
+  grid-row: 2;
+  grid-column: 2;
+  justify-self: start;
+  width: 30px;
+  height: 30px;
 }
 
 .trashCell {
