--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -503,7 +503,7 @@ div.workbench.button-group * {
 }
 .Luci-ValueGrid-cell.count {
   font-family: 'JetBrainsMono';
-  font-weight: 'normal';
+  font-weight: normal;
 }
 
 .Luci-Dialog.root .MuiDialog-paper {
@@ -710,7 +710,7 @@ button:-moz-focusring,
   position: absolute;
   top: 5px;
   right: 17px;
-  transform: 180deg;
+  transform: rotateX(180deg);
 }
 .Luci-FileField-HeadingBox  .minimize-button:hover {
     filter: brightness(1.2);
@@ -718,7 +718,7 @@ button:-moz-focusring,
 }
 .Luci-FileField-HeadingBox  .minimize-button.open {
   top: -11px;
-  transform: 0deg;
+  transform: rotateX(0deg);
 }
 
 .Luci-FileField-HeadingBox .border-heading {
@@ -859,6 +859,151 @@ span.google-drive {
     margin-bottom: 1rem;
 }
 /* ---------------------------------------- */
+/* Console log */
+pre.console-log {
+ background-color: #eee;
+ padding: 1em
+}
+.react-json-view .variable-value {
+    color: var(--color-primary-main);
+}
+.react-json-view .object-key > span {
+    color: var(--color-primary-main);
+}
+/* ---------------------------------------- */
+/* feedback */
+.feedback.root {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.4s ease-out;
+
+  max-height: 0px;
+  margin-top: 0px;
+}
+.feedback.root.show {
+  max-height: 250px;
+  margin-top: 36px;
+}
+.feedback.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 360px;
+  position: relative;
+}
+.feedback .text-area {
+  padding: 8px 12px;
+  border-radius: 12px;
+  border: 1px solid var(--color-box-border);
+  resize: none;
+  outline: none;
+  transition: box-shadow 300ms ease-in-out;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 140%;
+  width: 100%;
+  min-height: 112px;
+  box-sizing: border-box;
+  color: var(--color-text-primary);
+  background: var(--color-background-card);
+}
+.feedback .button.submit {
+  width: 100%;
+  border-radius: 12px;
+  border: 1px solid var(--color-box-border);
+  padding: 8px 24px;
+  background: var(--color-background-card);
+
+  color: var(--color-text-primary);
+  font-size: 1rem;
+  font-weight: 500;
+  outline: none;
+  cursor: pointer;
+}
+.feedback .button.submit:hover {
+  filter: brightness(1.4);
+  /* border-color: var(--color-custom-green); */
+  /* color: var(--color-custom-green); */
+}
+.feedback.mood-container {
+  display: flex;
+  align-content: center;
+  column-gap: 0.4rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.feedback .mood-icon {
+  padding: 2px;
+  padding-top: 1rem; /* space for tooltip */
+  transition: transform 200ms cubic-bezier(.5,-1,.5,2), filter 150ms ease-in-out, opacity 1500ms ease-in-out;
+  filter: blur(1.5px);
+  opacity: 0.5;
+  z-index: 10;
+}
+.feedback .mood-icon > img {
+    height: 2.5rem;
+    width: 2.5rem;
+}
+.feedback .mood-icon:hover {
+  transform: scale(1.12);
+  filter: blur(0);
+  opacity: 0.7;
+}
+.feedback .glowing-background {
+  background: linear-gradient(179.3deg, #FFD239 3.97%, rgba(255, 201, 51, 0.24) 58.23%, #E82992 106.1%);
+  filter: blur(30px);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+  z-index: 0;
+}
+.feedback .mood-tooltip {
+  position: absolute;
+  top: -1rem;
+  z-index: 100;
+  background: var(--color-text-primary);
+  font-size: 0.9rem;
+  color: var(--color-button-text);
+  border-radius: 8px;
+  padding: 3px 10px;
+  display: none;
+}
+.feedback .mood-label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+.feedback .mood-label > input {
+  position: absolute;
+  opacity: 0;
+}
+
+.feedback .mood-label input:checked ~ .mood-tooltip,
+.feedback .mood-label input:hover ~ .mood-tooltip {
+  display: block;
+}
+
+.feedback .mood-label input:checked ~ .mood-icon {
+  filter: blur(0);
+  border-color: var(--color-button-text);
+  transform: scale(1.315);
+  opacity: 1;
+}
+
+.feedback .mood-label input:checked ~ .glowing-background {
+    opacity: 1;
+}
+
 /*
  * Debugging layout markers
  */
