--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -92,6 +92,12 @@
 .noradius {
   border-radius: 0;
 }
+.justify-right {
+    justify-content: right;
+}
+.justify-center {
+    justify-content: center;
+}
 .space-between {
   justify-content: space-between;
 }
@@ -112,6 +118,23 @@
 }
 .hidden-n {
   display: none;
+}
+.relative {
+  position: relative;
+}
+.large-svg {
+  transform: scale(2);
+  margin: 0.5rem;
+}
+.regular-svg {
+  transform: scale(1.3);
+}
+.button-w-text {
+  cursor: pointer;
+}
+.button-w-text.regular > span > svg {
+  transform: scale(1.3);
+  margin: 0.3rem;
 }
 
 /*
@@ -245,6 +268,19 @@ button.cancel {
     text-decoration: none;
     color: unset;
 }
+.app-bar > .tool-bar > .button-group {
+    column-gap: 1.5rem;
+    font-size: 1.5rem;
+}
+.app-bar > .tool-bar > .button-group > button {
+    font-size: 1.0rem;
+    padding: 3px;
+    border-radius: 3px;
+}
+.app-bar > .tool-bar > .button-group > button svg {
+    width: 1.0rem;
+    height: 1.0rem;
+}
 .side-nav {
     height: inherit;
 }
@@ -287,10 +323,10 @@ button.cancel {
     padding: var(--padding);
 }
 /* adjust toggle */
-.controller.main.projects > .header > .toggle {
+.controller.main.projects > .header > .toggle,
+.controller.main.projects > .header > .toggle > button {
     margin: 0;
-    padding: var(--padding);
-    padding-right: var(--padding);
+    padding: 0;
 }
 .controller.main.projects.mini > .header > .toggle {
     margin: 0 auto;
@@ -403,6 +439,9 @@ button.stepbar.nav.next,
 .Luci-Dialog.root .actions > button.disabled,
 .stepbar.nav.disabled {
     opacity: 0.5;
+}
+.Luci-DirectoryView.drive-providers {
+    background: transparent;
 }
 /* absolute positioned items */
 .stepbar.logo {
@@ -822,6 +861,16 @@ span.google-drive {
   border-color: rgba(82, 165, 184, 0.4);
   border-top-color: var(--color-primary-main);
 }
+.spinner.spinner-sm {
+  width: 25px;
+  height: 25px;
+  border-width: 3px;
+}
+.spinner.default {
+  width: 40px;
+  height: 40px;
+  border-width: 4px;
+}
 .spinner.spinner-lg {
   width: 55px;
   height: 55px;
@@ -887,45 +936,44 @@ pre.console-log {
 }
 .feedback.root.show {
   max-height: 250px;
-  margin-top: 36px;
+  margin-top: 1rem;
 }
 .feedback.form {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 360px;
+  min-width: 300px;
   position: relative;
 }
-.feedback .text-area {
-  padding: 8px 12px;
-  border-radius: 12px;
+.feedback .text-area,
+.feedback .button.submit {
   border: 1px solid var(--color-box-border);
-  resize: none;
+  border-radius: 0.6rem;
+  width: 100%;
+  color: var(--color-text-primary);
+  background: var(--color-background-textarea);
   outline: none;
-  transition: box-shadow 300ms ease-in-out;
   font-size: 1rem;
+}
+.feedback .text-area {
+  padding: 0.4rem 0.6rem;
+  resize: none;
+  transition: box-shadow 300ms ease-in-out;
   font-weight: 400;
   line-height: 140%;
-  width: 100%;
   min-height: 112px;
-  box-sizing: border-box;
-  color: var(--color-text-primary);
-  background: var(--color-background-card);
+  font-family: Lato;
 }
 .feedback .button.submit {
-  width: 100%;
-  border-radius: 12px;
-  border: 1px solid var(--color-box-border);
-  padding: 8px 24px;
-  background: var(--color-background-card);
-
-  color: var(--color-text-primary);
-  font-size: 1rem;
+  padding: 0.4rem 1.5rem;
   font-weight: 500;
-  outline: none;
   cursor: pointer;
 }
-.feedback .button.submit:hover {
+.feedback .button.submit:disabled {
+  color: var(--color-text-primary);
+}
+.feedback .button.submit:hover:enabled {
   filter: brightness(1.4);
   /* border-color: var(--color-custom-green); */
   /* color: var(--color-custom-green); */
@@ -946,8 +994,8 @@ pre.console-log {
   z-index: 10;
 }
 .feedback .mood-icon > img {
-    height: 2.5rem;
-    width: 2.5rem;
+    height: 2rem;
+    width: 2rem;
 }
 .feedback .mood-icon:hover {
   transform: scale(1.12);
@@ -966,7 +1014,7 @@ pre.console-log {
 }
 .feedback .mood-tooltip {
   position: absolute;
-  top: -1rem;
+  top: -1.4rem;
   z-index: 100;
   background: var(--color-text-primary);
   font-size: 0.9rem;
@@ -1003,6 +1051,209 @@ pre.console-log {
 .feedback .mood-label input:checked ~ .glowing-background {
     opacity: 1;
 }
+/* staging entry, exit */
+
+.actor.thank-you,
+.feedback-modal.root {
+  background: var(--color-background-feedback);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--color-box-border);
+  border-radius: var(--default-radius);
+  padding: 1.5rem;
+  box-sizing: border-box;
+  max-height: unset;
+  height: var(--feedback-stage-height);
+  width: var(--feedback-stage-width);
+  flex-wrap: nowrap;
+}
+.feedback-modal.root > .header {
+  width: 100%;
+}
+.feedback-modal.root > .header > .heading {
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+  color: var(--color-text-primary);
+  white-space: normal;
+  text-align: center;
+  width: 100%;
+  margin-right: -1rem;
+}
+.feedback-modal.root > .header > .close-button {
+  border: none;
+  color: var(--color-text-primary);
+  background: none;
+  cursor: pointer;
+  outline: none;
+  transform: translate(0.8rem, -0.1rem);
+  align-self: flex-start;
+  /* position: absolute; */
+  /* right: 1rem; */
+}
+/* parent is stage.root with relative positioning */
+.stage.button {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+}
+/* starting position of the feedback form */
+.stage.feedback {
+    position: absolute;
+    right: 0;
+    top: var(--animation-top-origin-feedback);
+    transform: var(--animation-start-feedback);
+    opacity: 0;
+    z-index: 1;
+}
+
+.stage.feedback .relative,
+.actor.thank-you {
+    position: relative;
+}
+.floating-actions {
+    position: absolute;
+    bottom: 178px;
+    right: 1.5rem;
+}
+/* --------------------------------------------------------- */
+/* stage */
+/* --------------------------------------------------------- */
+:root {
+  --feedback-stage-width: 350px;
+  --feedback-stage-height: 339px;
+}
+.stage-root {
+  width: var(--feedback-stage-width);
+  height: var(--feedback-stage-height);
+  position: relative;
+  contain: content;
+}
+.stage-root.left-up {
+  --animation-enter-feedback: enter-feedback-left-up;
+  --animation-exit-feedback: exit-feedback-left-up;
+  --animation-start-feedback: translateX(400px);
+  --animation-top-origin-feedback: calc(-1 * var(--feedback-stage-height) + 2rem);
+}
+.stage-root.left-down {
+  --animation-enter-feedback: enter-feedback-left-down;
+  --animation-exit-feedback: exit-feedback-left-down;
+  --animation-start-feedback: translateY(-200px);
+  --animation-top-origin-feedback: 0px;
+}
+
+/* grid-item and parent  */
+.on-stage {
+  position: relative;
+}
+.on-stage > * {
+    position: absolute
+}
+.single-grid {
+  display: grid;
+  place-items: center center;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(0, 1fr);
+  height: inherit;
+  width: inherit;
+}
+.single-grid-child {
+  grid-area: 1 / 1 / -1 / -1;
+  height: inherit;
+  width: inherit;
+}
+/* end stage ---------------------- */
+
+.actor.thank-you {
+  visibility: hidden;
+  top: 0;
+  left: 0;
+}
+.actor.thank-you > .frame {
+  align-items: center;
+  margin: auto
+}
+.actor.thank-you svg {
+  font-size: 100px;
+  color: var(--color-secondary-main);
+}
+.actor.thank-you .heading {
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+  white-space: normal;
+  text-align: center;
+  width: 100%;
+}
+/* submit state */
+.actor.thank-you.submit {
+  visibility: visible;
+}
+.actor.feedback.submit {
+  visibility: hidden;
+}
+/* ----------------------------------------- */
+/* slide-in the feedback form */
+@keyframes enter-feedback-left-down {
+    0% { opacity: 0; }
+    70% { opacity: 1; }
+    100% {
+        transform: translateY(50px);
+        opacity: 1;
+    }
+}
+@keyframes exit-feedback-left-down {
+    0% {
+        transform: translateY(50px);
+        opacity: 1;
+    }
+    90% { opacity: 1; }
+    100% {
+        transform: translateY(-360px);
+        opacity: 0;
+    }
+}
+/* ----------------------------------------- */
+@keyframes enter-feedback-left-up {
+    0% { opacity: 0; }
+    70% { opacity: 1; }
+    100% {
+        transform: translateX(-80px);
+        opacity: 1;
+    }
+}
+@keyframes exit-feedback-left-up {
+    0% {
+        transform: translateX(-80px);
+        opacity: 1;
+    }
+    70% { opacity: 0; }
+    100% {
+        transform: translateX(200px);
+        opacity: 0;
+    }
+}
+/* ----------------------------------------- */
+/* subject of the animation */
+.stage.feedback.enter {
+    animation-name: var(--animation-enter-feedback);
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+.stage.feedback.exit {
+    animation-name: var(--animation-exit-feedback);
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+/* end feedback */
+/* ---------------------------------------- */
 
 /*
  * Debugging layout markers
