--- a/src/assets/luci-theme.css
+++ b/src/assets/luci-theme.css
@@ -89,6 +89,8 @@ const parse = jsonString => {
   --color-split-pane-resizer: var(--color-primary-superLight);
   --color-resizer: var(--color-primary-light);
   --gradient-controller-overlay: linear-gradient(to right, transparent 65%, #ddd 85%);
+  --color-background-feedback: var(--color-primary-light);
+  --color-background-textarea: var(--color-background);
   /* end dark-theme */
 }
 
@@ -113,10 +115,13 @@ const parse = jsonString => {
   --color-text-secondary:rgba(250, 250, 250, 0.8);
   --color-secondary-superLight: rgba(255, 168, 104, 0.3);
   --color-secondary-dark: #a5480070;
+  --color-secondary-main:#FFA868;
   --color-invert: 87%;
   --color-split-pane-resizer: var(--color-secondary-superLight);
   --color-resizer: var(--color-secondary-dark);
   --gradient-controller-overlay: linear-gradient(to right, transparent 60%, var(--color-background-heading) 90%);
+  --color-background-feedback: var(--color-background-heading);
+  --color-background-textarea: var(--color-background-card);
 }
 .color-go-green {
   color: rgb(0, 179, 0, 1);
