--- a/src/assets/luci-theme.css
+++ b/src/assets/luci-theme.css
@@ -81,6 +81,7 @@ const parse = jsonString => {
   --color-box-border: rgb(207, 207, 207);
   --color-text-primary:rgba(0, 0, 0, 0.6);
   --color-text-secondary:rgba(0, 0, 0, 0.7);
+  --color-text-strong:rgba(0, 0, 0, 0.95);
   --color-text-disabled:rgba(0, 0, 0, 0.5);
   --color-text-icon:rgba(0, 0, 0, 0.5);
   --color-text-hint:rgba(0, 0, 0, 0.7);
@@ -88,9 +89,9 @@ const parse = jsonString => {
   --color-invert: 0;
   --color-split-pane-resizer: var(--color-primary-superLight);
   --color-resizer: var(--color-primary-light);
-  --gradient-controller-overlay: linear-gradient(to right, transparent 65%, #ddd 85%);
   --color-background-feedback: var(--color-primary-light);
   --color-background-textarea: var(--color-background);
+  --gradient-controller-overlay: linear-gradient(to right, transparent 75%, #ddd 88%);
   /* end dark-theme */
 }
 
@@ -113,15 +114,16 @@ const parse = jsonString => {
   --color-primary-contrastText: rgb(18, 18, 18);
   --color-text-primary:rgba(250, 250, 250, 0.6);
   --color-text-secondary:rgba(250, 250, 250, 0.8);
+  --color-text-strong:rgba(250, 250, 250, 0.95);
   --color-secondary-superLight: rgba(255, 168, 104, 0.3);
   --color-secondary-dark: #a5480070;
   --color-secondary-main:#FFA868;
   --color-invert: 87%;
   --color-split-pane-resizer: var(--color-secondary-superLight);
   --color-resizer: var(--color-secondary-dark);
-  --gradient-controller-overlay: linear-gradient(to right, transparent 60%, var(--color-background-heading) 90%);
   --color-background-feedback: var(--color-background-heading);
   --color-background-textarea: var(--color-background-card);
+  --gradient-controller-overlay: linear-gradient(to right, transparent 75%, var(--color-background-heading) 90%);
 }
 .color-go-green {
   color: rgb(0, 179, 0, 1);
