--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -723,12 +723,13 @@ button:-moz-focusring,
 .Luci-sources.root * {
     background-color: var(--color-background-card);
 }
-.Luci-EtlFieldView.summaryView > td:nth-child(3) > .componentCountCell > div {
-    display: flex;
+.componentCountCell,
+.componentCountCell > div {
+  display: flex;
+  justify-content: center;
 }
-.Luci-EtlFieldView.summaryView > td:nth-child(3) > .componentCountCell > div > p {
-    margin-top: auto;
-    margin-bottom: auto;
+.componentCountCell > div > p {
+  margin: auto;
 }
 .Luci-FileField-HeadingBox > .box-card {
   border: 1px solid var(--color-box-border);
