scroll meta page

--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -257,6 +257,7 @@ button.cancel {
 }
 .app-paging-view {
   max-height: var(--core-app-outlet-height);
+  overflow: scroll;
 }
 .app-paging-view > div {
   height: 100%;
